[package]
name = "proof-essentials"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-crypto-primitives = "0.3.0"
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-marlin = { version = "0.3.0", default-features = false }
ark-serialize = "0.3.0"
ark-std = { version = "0.3.0", default-features = false }
merlin = { version = "3.0.0", default-features = false }
rand = { version = "0.8.4", default-features = false }
thiserror = "1.0.30"
blake2 = { version = "0.9", default-features = false }
digest = { version = "0.9" }

[dev-dependencies]
starknet-curve = { path = "../starknet-curve" }
rand = "0.8.4"
criterion = "0.3"
wasm-bindgen-test = "0.3.29"

[[bench]]
name = "shuffle"
harness = false
